<resources>
    <string name="app_name">LoyaltyCard</string>
    <string name="facebook_app_id">11111111</string>

    <string name="action_settings">設定</string>

    <string name="app_system_fail">系統異常，請洽客服人員</string>
    <string name="app_system_servce_fail">資料錯誤</string>
    <string name="app_system_ok">確認</string>
    <string name="app_system_waitMSG">等待驗證簡訊中</string>

    <string name="applicationName">熟客卡</string>
    <string name="store">集點店家</string>
    <string name="preferential">限量優惠卷</string>
    <string name="pocket">我的口袋</string>
    <string name="more">更多</string>

    <string name="welcome_reg">手機號碼/註冊登入</string>
    <string name="welcome_guest">馬上玩玩</string>
    <string name="rsg_success">手機號碼認證成功</string>
    <string name="rsg_fail">手機號碼認失敗</string>

    <string name="login_title">粉多熟客卡</string>
    <string name="login_content1">粉多熟客卡利用手機號碼作為集點帳戶，讓您集點、兌換都輕鬆方便。</string>
    <string name="login_content2">請輸入手機號碼後，系統將發送一封驗證碼至您手機。</string>
    <string name="login_skip">先略過此步驟</string>
    <string name="login_numberHint">請輸入您的手機號碼</string>
    <string name="login_trip">請輸入正確的手機號碼</string>
    <string name="login_number">手機號碼：</string>
    <string name="login_verification">驗證碼(30分內有效)</string>
    <string name="login_verificationHint">請輸入簡訊驗證碼</string>
    <string name="login_btn_dialog">去看看</string>
    <string name="login_btn_fbbuding">FB綁定</string>

    <string name="store_item_pointTitle">集點</string>
    <string name="store_item_experienceTitle">首次體驗</string>
    <string name="store_item_searchedit">搜尋店家名稱</string>
    <string name="store_tag">限量</string>
    <string name="store_reciprocal">倒數 %1$d 天</string>
    <string name="substore_beaconcontrol">Beacon到店優惠通知</string>
    <string name="substore_blog">部落格評價</string>
    <string name="substore_title">餐廳介紹</string>
    <string name="substore_pointtitle">集點注意事項</string>
    <string name="subpreferential_qty">剩%1$d張</string>
    <string name="subpreferential_day">剩%1$d天</string>
    <string name="subpreferential_dis">目前距離：</string>

    <string name="more_infromation_login">尚未登入</string>
    <string name="more_information_sex">性別：</string>
    <string name="more_information_brithday">生日：</string>
    <string name="more_information_phonenumber">手機號碼：</string>
    <string name="more_server_phoneattest">手機認證</string>
    <string name="more_server_Locationserver">位置服務</string>
    <string name="more_server_bluetoothserver">藍芽服務</string>
    <string name="more_server_pushattest">優惠推播</string>
    
    <string name="more_serverstatus_alreadyopen">已開啟</string>
    <string name="more_serverstatus_notopen">未開啟</string>
    <string name="more_serverstatus_alreadyattest">已認證</string>
    <string name="more_serverstatus_notattest">未認證</string>
    
    <string name="pocket_sogin">熟客\n福利</string>
    <string name="pocket_level">熟客卡等級</string>
    <string name="pocket_leveUnit">分熟</string>
    <string name="pocket_store">光顧店家</string>
    <string name="pocket_point">累積點數</string>
    <string name="pocket_frequency">累積次數</string>
    <string name="pocket_saving">省下金額</string>
    
    <string name="pocket_mypoint">我的集點</string>
    <string name="pocket_mypreferential">我的優惠卷</string>
    <string name="pocket_exchange">兌換紀錄</string>

    <string name="subfront_preferential">優惠卷</string>
    <string name="subfront_pointcare">集點卡</string>
    <string name="subfront_information">店家資訊</string>

    <string name="preferenial_desc">詳細說明</string>
    <string name="preferenial_usertime">使用期限</string>
    
    
    <string name="btn_nowuse">立即使用</string>
    <string name="btn_collect">收進口袋</string>
    

    <string name="strApi_fbShare">FB分享</string>
    <string name="strApi_1st">首次體驗</string>
    <string name="strApi_latest">一般優惠</string>

    <string-array name="more_List">
        <item>關於粉多集點卡</item>
        <item>服務條款</item>
        <item>店家合作</item>
        <item>FAQ</item>
        <item>問題回報</item>
    </string-array>
    
    <string name="server_Unit_meter">\n公尺</string>

    <string-array name="weekday">
        <item>星期日</item>
        <item>星期ㄧ</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>

    <!-- filter order hard code-->
    <!-- index 0 is version , if version have update
         then all update -->
    <string-array name="filter_order">
        <item>V1</item>
        <item>依距離</item>
        <item>依優惠更新</item>
        <item>依近期熱門</item>
    </string-array>

    <!-- unit -->
    <string name="meter">公尺</string>
    <string name="kilometer">公里</string>
    <string name="dollar_tenthousand">萬</string>


    <!-- Tag Key-->
    <item type="id" name="tag_isPress">true</item>
    <item type="id" name="tag_isPressed">false</item>
    <item type="id" name="tag_frontPageStatus"></item>

</resources>