<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        style="@style/font_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"/>

    <TextView
        style="@style/font_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_content2"/>

    <TextView
        style="@style/font_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_number"/>

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:textColor="@color/orange"/>


    <TextView
        style="@style/font_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_verification"/>


    <EditText
        style="@style/font_edit"
        android:id="@+id/verifvation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_verificationHint"
        android:textColor="@color/orange">
        <requestFocus/>
    </EditText>

    <TextView
        style="@style/font_skip"
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_skip"/>

</LinearLayout>
