<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <ImageView
           android:id="@+id/img_StorePicture"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:src="@mipmap/test_stroe"/>

       <ImageView
           android:id="@+id/img_bank"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_marginTop="10dp"
           android:src="@mipmap/bg_common_white_tag"/>

   </RelativeLayout>

    <LinearLayout
        android:id="@+id/ly_mytabsArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@mipmap/btn_common_white_kind_normal">

        <TextView
            android:id="@+id/txt_preferential"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/subfront_preferential"
            android:background="@mipmap/btn_common_white_kind_normal"/>

        <ImageView
            style="@style/line_Vertical_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_point"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/subfront_pointcare"
            android:background="@mipmap/btn_common_white_kind_normal"/>

        <ImageView
            style="@style/line_Vertical_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_storeInformation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/subfront_information"
            android:background="@mipmap/btn_common_white_kind_normal"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/view_Preferential"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
